...
            <point key="canvasLocation" x="-1213" y="46"/>
        </scene>
        <!--首页-->
        <scene sceneID="ijw-ux-Ws8">
            <objects>
                <navigationController id="9Z2-Oi-qft" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="首页" image="Icon_Homepage_Normal" selectedImage="Icon_Homepage_ Selected" id="lJa-Rj-3kO"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SRt-9S-1OV">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="PWg-9x-EQL" kind="relationship" relationship="rootViewController" id="GXW-34-Eko"/>
...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="V6B-TI-ChP">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="我的" id="SQ1-fH-YBo"/>
                    <navigationItem key="navigationItem" id="AcI-nt-qRs"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dpe-gc-C0j" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="423" y="1057"/>
        </scene>
...
