...
        }
        NavigationPushView(controller, toConroller: mySellPager)
    }
    
    func tableViewPhotoCell(_ cell:MineHeadTableViewCell){
        if !UserInfoModel.isLoggedIn() {
            cell.setData("注册 / 登录", photoImage:"Avatar_Default", isLogin: false)
        }else{
            cell.setData(UserInfoModel.shareInstance().username, photoImage: UserInfoModel.shareInstance().avatar, isLogin: true)

        }
    }
}
...
